--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
     <script src="https://kit.fontawesome.com/c3713995f0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
     <title>Rosie</title>
@@ -28,19 +30,21 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
-                        <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                            <a href="#"><i class="fa fa-home" aria-hidden="true"></i><span>Home</i></span></a>
-                        </li>
-                        <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
-                            <a href="#"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
-                        </li>
-                        <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-                            <a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
-                        </li>
-                        <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                            <a href="#"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
-                        </li>
-                        </ul>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
+                                        aria-hidden="true"></i><span>Resume</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
+                                        aria-hidden="true"></i><span>Contact</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download
+                                        CV</span></a>
+                            </li>
                     </div>
                 </div>
             </div>
